--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/login?lang=en
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/AnweshaSen
   - title: linkedin
-    url: 
+    url: https://www.linkedin.com/in/anweshasen/
