--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/login?lang=en
+  - title: facebook
+    url: https://www.facebook.com/profile.php?id=100009598478968
   - title: github
     url: https://github.com/AnweshaSen
   - title: linkedin
